[tool.poetry]
name = "tfc-cancel-pending"
version = "0.1.0"
description = "Cancel pending runs in a Terraform Cloud workspace"
authors = ["Jason McVetta <jmcvetta@hey.com>"]
readme = "README.md"
packages = [{include = "tfc_cancel_pending"}]

[tool.poetry.dependencies]
python = "^3.9"
terrasnek = "^0.1.12"
structlog = "^22.3.0"
environs = "^9.5.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[tool.poetry.scripts]
tfc-cancel-pending = "tfc_cancel_pending.script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
